# ProServ-NLI-Builder

./: .gitignore  README.md
.claude/: settings.local.json
python/: .gitignore  README.md  pyproject.toml
python/build-py/: build_nli_dist.ps1
python/docs/source/: conf.py  index.rst  modules.rst  nuix_nli_lib.data_types.rst  nuix_nli_lib.edrm.rst  nuix_nli_lib.nli.rst  nuix_nli_lib.rst
python/main/PostFixTest/: EmailFileEntry.py  NLISubclass.py  addingentries.py
python/main/data_types/: __init__.py  csv_file.py
python/main/edrm/: DirectoryEntry.py  EDRMBuilder.py  EDRMUtilities.py  EntryField.py  EntryInterface.py  FieldFactory.py  FileEntry.py  MappingEntry.py  __init__.py
python/main/nli/: nli_generator.py
python/main/nuix_nli_lib/: __init__.py
python/main/nuix_nli_lib/data_types/: __init__.py  csv_file.py  json_file.py  sql_type.py
python/main/nuix_nli_lib/edrm/: DirectoryEntry.py  EDRMBuilder.py  EDRMUtilities.py  EntryField.py  EntryInterface.py  FieldFactory.py  FileEntry.py  MappingEntry.py  __init__.py
python/main/nuix_nli_lib/nli/: __init__.py  nli_generator.py
python/resources/: incident.csv  init_nuix_nli_env.py  nli_builder.bat  run_nli_cmds.py
python/test/: complex_family_csv.py  csv_tests.py  edrm_tests.py  json_tests.py  nested_csv_rows.py  nli_tests.py  sanctions_tests.py  telepathy_generator.py  telepathy_reader.py  text_thread_tests.py
python/test/resources/: CC.Medium.csv  object_complex.json  text_thread.csv  text_thread_v2.csv  text_thread_v2_b.csv  texts.nli  windows.pslist.MinPsList.csv
python/test/resources/certificates/: 141838042177536-AAD Token Issuer-DA8065A2E7A307E589D5AF3D98A8A235B5B8B8D6..crt  141838042177536-CA-A4BF3999AB9C5B07BFE9F85353C41B684479CCD1..crt  141838042177536-CA-B7E496F8B576882535AB7CB7EBAA22DA647750AC..crt  141838042177536-CA-C5F2D44F963ADCD075B48DEEB27B7531AAC10153..crt  (+16 more)
(+88 files in other folders)
